# mooncompute

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
.just/: commit.just  ship.just
docs/: RELEASING.md  ROADMAP.md
docs/superpowers/plans/: 2026-06-03-consumer-ergonomics.md  2026-06-09-mooncompute-v0.4.md
docs/superpowers/specs/: 2026-06-02-consumer-ergonomics-design.md  2026-06-09-mooncompute-v0.4-design.md
src/dswkit/gcp/: __init__.py  _creds.py  bq.py  gcs.py
src/mooncompute/: __init__.py  cache.py  config.py  io.py  sql.py
src/mooncompute/gcp/: __init__.py  bq.py  gcs.py
src/mooncompute/llm/: __init__.py  _gemini.py  ops.py
src/mooncompute/sources/: bigquery.py  gcs.py
tests/: fakes.py  test_bigquery.py  test_bq2pl.py  test_bq_helpers.py  test_cache.py  test_config.py  test_creds.py  test_extract_cached.py  test_gcs.py  test_gemini.py  test_io.py  test_llm_ops.py  test_pl2bq.py  test_public_api.py  test_sql.py
