[project]
name = "mooncompute"
version = "0.2.0"
description = "Ergonomic GCP data-access helpers: BigQuery <-> polars, GCS, and a SQL-hash parquet cache."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Garrett Mooney" }]
keywords = ["bigquery", "polars", "gcs", "google-cloud", "arrow"]
dependencies = [
    "polars>=1.0",
    "pyarrow>=15",
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "db-dtypes>=1.0",
]

[project.urls]
Homepage = "https://github.com/garrettmooney/mooncompute"
Repository = "https://github.com/garrettmooney/mooncompute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooncompute"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
