[project]
name = "mooncompute"
version = "0.3.1"
description = "Ergonomic GCP data-access helpers: BigQuery <-> polars, GCS, and a SQL-hash parquet cache."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Garrett Mooney" }]
keywords = ["bigquery", "polars", "gcs", "google-cloud", "arrow"]
# Note: no "License :: OSI Approved" classifier -- it conflicts with the SPDX
# `license = "MIT"` field above (PEP 639).
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
# Base install is intentionally dependency-free: it provides only the credential
# helper and gs:// URI parsing (stdlib). Pull an extra for actual I/O so a
# JSON/bytes-only consumer (e.g. a Cloud Function) never installs polars+pyarrow.
dependencies = []

[project.optional-dependencies]
# BigQuery <-> polars. Also the home of polars+pyarrow, which the gcs parquet
# helpers lazily require (install `mooncompute[bq,gcs]` for parquet on GCS).
bq = [
    "polars>=1.0",
    "pyarrow>=15",
    "google-cloud-bigquery>=3.0",
    "db-dtypes>=1.0",
]
# GCS object I/O. JSON/bytes need only google-cloud-storage; parquet additionally
# needs polars (lazily imported), so pair with `[bq]` for parquet.
gcs = [
    "google-cloud-storage>=2.0",
]
all = [
    "mooncompute[bq,gcs]",
]

[project.urls]
Homepage = "https://github.com/garrettmooney/mooncompute"
Repository = "https://github.com/garrettmooney/mooncompute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooncompute"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]

[dependency-groups]
# Self-reference the extras so a bare `uv sync` (CI + local) installs the full
# stack for tests; the published wheel still ships the extras as opt-in.
dev = [
    "mooncompute[bq,gcs]",
    "pytest>=8",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
