[project]
name = "mooncompute"
version = "0.4.0"
description = "Thin Arrow-glue for data science: one read/write/sql surface over BigQuery, GCS, Polars, DuckDB, plus LLM column ops."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Garrett Mooney" }]
keywords = ["bigquery", "polars", "duckdb", "gcs", "arrow", "llm", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
# Core pulls the Arrow substrate so read("gs://...") and sql() work on a bare
# install. GCP clients and the LLM provider are opt-in extras.
dependencies = [
    "polars>=1.0",
    "pyarrow>=15",
    "duckdb>=1.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.0",
    "google-cloud-storage>=2.0",
    "db-dtypes>=1.0",
]
llm = [
    "google-genai>=0.3",
]
all = ["mooncompute[gcp,llm]"]

[project.urls]
Homepage = "https://github.com/garrettmooney/mooncompute"
Repository = "https://github.com/garrettmooney/mooncompute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooncompute"]

[tool.hatch.build.targets.wheel.force-include]
"src/mooncompute/py.typed" = "mooncompute/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
# Session-history reference stubs (the original "flow" skeleton) are not package
# code and should not be linted.
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]

[dependency-groups]
dev = [
    "mooncompute[gcp,llm]",
    "pytest>=8",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
